--- a/LibraryGPT/LibraryGPT.csproj
+++ b/LibraryGPT/LibraryGPT.csproj
@@ -9,11 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Cake.Powershell" Version="3.0.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="NLog" Version="5.2.5" />
     <PackageReference Include="Selenium.WebDriver" Version="4.15.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="120.0.6099.500-beta" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="120.0.6099.1800-beta" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="System.Management" Version="8.0.0-rc.2.23479.6" />
     <PackageReference Include="System.Text.Json" Version="8.0.0-rc.2.23479.6" />
